k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: debasnan-lb5
  name: debasnan-lb5
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: debasnan-dep1
  type: ClusterIP
status:
  loadBalancer: {}
